<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/Home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/AddFriend"
        android:icon="@drawable/addfriend"
        android:title="@string/addfriend"
        android:showAsAction="ifRoom"
        />
    
    <item
        android:id="@+id/SendFile"
        android:icon="@drawable/sendfile"
        android:title="@string/sendFile"
        android:showAsAction="ifRoom"/>
    
    <item
		android:id="@+id/ViewLog"
		android:icon="@drawable/log"
		android:title="@string/viewLog"
		android:showAsAction="ifRoom"/>
        
    <item
        android:id="@+id/Logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        android:showAsAction="ifRoom" />

</menu>